feat: 修改資料夾路徑

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>index</title>
 </head>
 <body>
-    <a href="login.html">login</a>
+    <a href="./week4/login.html">第四週作業檔</a>
 </body>
 </html>
